--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -1,6 +1,6 @@
 {
     "accept": "Accept",
-    "act-activity-notify": "[Wekan] Activity Notification",
+    "act-activity-notify": "[Tracker] Activity Notification",
     "act-addAttachment": "attached __attachment__ to __card__",
     "act-addComment": "commented on __card__: __comment__",
     "act-createBoard": "created __board__",
@@ -18,7 +18,7 @@
     "act-removeBoardMember": "removed __member__ from __board__",
     "act-restoredCard": "restored __card__ to __board__",
     "act-unjoinMember": "removed __member__ from __card__",
-    "act-withBoardTitle": "[Wekan] __board__",
+    "act-withBoardTitle": "[Tracker] __board__",
     "act-withCardTitle": "[__board__] __card__",
     "actions": "Actions",
     "activities": "Activities",
@@ -185,10 +185,10 @@
     "import-board-trello-instruction": "In your Trello board, go to 'Menu', then 'More', 'Print and Export', 'Export JSON', and copy the resulting text.",
     "import-json-placeholder": "Paste your valid JSON data here",
     "import-map-members": "Map members",
-    "import-members-map": "Your imported board has some members. Please map the members you want to import to Wekan users",
+    "import-members-map": "Your imported board has some members. Please map the members you want to import to Tracker users",
     "import-show-user-mapping": "Review members mapping",
-    "import-user-select": "Pick the Wekan user you want to use as this member",
-    "importMapMembersAddPopup-title": "Select Wekan member",
+    "import-user-select": "Pick the Tracker user you want to use as this member",
+    "importMapMembersAddPopup-title": "Select Tracker member",
     "info": "Infos",
     "initials": "Initials",
     "joined": "joined",
